fix: adjustment on small device

--- a/src/styles/Sidebar/Sidebar.css
+++ b/src/styles/Sidebar/Sidebar.css
@@ -44,7 +44,7 @@
     position: fixed;
     top: 0;
     left: 0;
-    height: 100vh;
+    height: 95vh;
     width: 200px;
     overflow-y: auto;
     transform: translateX(-100%);
